--- a/Dockerfile.streamlit
+++ b/Dockerfile.streamlit
@@ -1,10 +1,13 @@
-FROM python:3.10
+FROM python:3.10-slim
 
 WORKDIR /app
 
-COPY requirements.txt requirements.txt
-RUN pip install -r requirements.txt
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+COPY streamlit_ui/ /app/streamlit_ui/
+
+EXPOSE 8501
 
 CMD ["streamlit", "run", "streamlit_ui/app.py", "--server.port=8501", "--server.enableCORS=false"]
+
